# TechniquesOfEffectiveProgramming

Techniki Efektywnego Programowania Laboratoria 1/TEP_Laboratoria1/: CMakeLists.txt  C_table.cpp  C_table.h  allocation_modification_functions_and_constants.cpp  allocation_modification_functions_and_constants.h  main.cpp  test.cpp  test.h
Techniki Efektywnego Programowania Laboratoria 2/: CMakeLists.txt  C_table.cpp  C_table.h  main.cpp  table_utilities.cpp  table_utilities.h
Techniki Efektywnego Programowania Laboratoria 3/: CMakeLists.txt  CTreeDynamic.cpp  CTreeDynamic.h  CTreeStatic.cpp  CTreeStatic.h  main.cpp
Techniki Efektywnego Programowania Laboratoria 6 (Algorytm Ewolucyjny)/: AG.cpp  AG.h  CIndividual.cpp  CIndividual.h  CKnapsackProblem.cpp  CKnapsackProblem.h  CMakeLists.txt  CProblem.cpp  CProblem.h  Util.cpp  Util.h  main.cpp
TechnikiEfektywnegoProgramowania5_C17/: CMakeLists.txt  CMySmartPointer.cpp  CMySmartPointer.h  CRefCounter.cpp  CRefCounter.h  CSmartPointerMS.cpp  CSmartPointerMS.h  CTab.cpp  CTab.h  CTabMS.cpp  CTabMS.h  main.cpp
TechnikiEfektywnegoProgramowaniaLaboratoria4/: CMakeLists.txt  CTreeDynamic.h  main.cpp
