cmake_minimum_required(VERSION 3.24)
project(TechnikiEfektywnegoProgramowania5_C17)

set(CMAKE_CXX_STANDARD 17)

add_executable(TechnikiEfektywnegoProgramowania5_C17 main.cpp CMySmartPointer.cpp CMySmartPointer.h CRefCounter.cpp CRefCounter.h CTab.cpp CTab.h CTabMS.cpp CTabMS.h CSmartPointerMS.cpp CSmartPointerMS.h)
